bug: #0002247 - SQL Injection in thold.php (must be authenticated first) Thanks Primož!! Upgraded version to 0.5 for new release
git-svn-id: svn+ssh://repo.cacti.net/var/data/svnroot/cacti_plugins/thold/trunk@2090 67214365-cc29-0410-bfbe-843132f0f3d7

--- a/README
+++ b/README
@@ -31,10 +31,11 @@
 	Got any ideas or complaints, please e-mail me!
 
 ----[ Changelog
-	--- SVN ---
+	--- 0.5 ---
 		feature: Allow threshold log retention to be configurable
 		bug: Thold Suggested Names not applied in all cases
 		bug: Use of Aggregate breaks Thold edit UI and new Tholds
+		bug: #0002247 - SQL Injection in thold.php (must be authenticated first) Thanks Primož!!
 
 	--- 0.4.9 ---
 		feature: Allow HRULES based upon HI/LOW Value portions courtesy of Barnaby Puttick
